--- a/hugging_face_text_classification.ipynb
+++ b/hugging_face_text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNO2pGZneh9ko9KKEON/nzB",
+      "authorship_tag": "ABX9TyNYWOUsO8yv/SLGU70uovcT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7671,6 +7671,63 @@
           },
           "metadata": {},
           "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hcYdvHIRR_MN"
+      },
+      "source": [
+        "## 6.3 Setting up training arguments with TrainingArguments\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import TrainingArguments\n",
+        "\n",
+        "print(f\"[INFO] Saving model checkpoints to: {model_save_dir}\")\n",
+        "\n",
+        "# Create training arguments\n",
+        "training_args = TrainingArguments(\n",
+        "    output_dir=model_save_dir,\n",
+        "    learning_rate=0.0001,\n",
+        "    per_device_train_batch_size=32,\n",
+        "    per_device_eval_batch_size=32,\n",
+        "    num_train_epochs=10,\n",
+        "    eval_strategy=\"epoch\",\n",
+        "    save_strategy=\"epoch\",\n",
+        "    save_total_limit=3,\n",
+        "    use_cpu=False,\n",
+        "    seed=42,\n",
+        "    load_best_model_at_end=True,\n",
+        "    logging_strategy=\"epoch\",\n",
+        "    report_to=\"none\",\n",
+        "    # push_to_hub=True\n",
+        "    # hub_token=\"Your token here\"\n",
+        "    hub_private_repo=False\n",
+        ")\n",
+        "\n",
+        "# Print out training_args to inspect (warning, it is quite a long output)\n",
+        "# training_args"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x7KMmPSJjyJy",
+        "outputId": "96ec38db-d4d9-4940-e67b-41def02919d6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Saving model checkpoints to: models/learn_hf_food_not_food_text_classifier-distilbert-base-uncased\n"
+          ]
         }
       ]
     },
