--- a/hugging_face_text_classification.ipynb
+++ b/hugging_face_text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP6SmLm10YYMpI7p+/GhP8k",
+      "authorship_tag": "ABX9TyM8GUbyhp6w/nCgmMeqD6PV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15006,6 +15006,63 @@
         "\n",
         "food_not_food_classifier(\"Yo! We just built a food not food sentence classifier model! Good news is, it can be replicated for other kinds of text classification!\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0EKpjgKp8bHD"
+      },
+      "source": [
+        "# 10. Turning our model into a demo\n",
+        "\n",
+        "Once you've trained and saved a model, one of the best ways to continue to test it and show/share it with others is to create a demo.\n",
+        "\n",
+        "Or step number 8 in our workflow:\n",
+        "\n",
+        "1. ✅ Create and preprocess data.\n",
+        "2. ✅ Define the model we'd like use with [`transformers.AutoModelForSequenceClassification`](https://huggingface.co/docs/transformers/en/model_doc/auto#transformers.AutoModelForSequenceClassification) (or another similar model class).\n",
+        "3. ✅ Define training arguments (these are hyperparameters for our model) with [`transformers.TrainingArguments`](https://huggingface.co/docs/transformers/en/main_classes/trainer#transformers.TrainingArguments).\n",
+        "4. ✅ Pass `TrainingArguments` from 3 and target datasets to an instance of [`transformers.Trainer`](https://huggingface.co/docs/transformers/en/main_classes/trainer).\n",
+        "5. ✅ Train the model by calling [`Trainer.train()`](https://huggingface.co/docs/transformers/v4.40.2/en/main_classes/trainer#transformers.Trainer.train).\n",
+        "6. ✅ Save the model (to our local machine or to the Hugging Face Hub).\n",
+        "7. ✅ Evaluate the trained model by making and inspecting predctions on the test data.\n",
+        "8. Turn the model into a shareable demo.\n",
+        "\n",
+        "A demo is a small application with the focus of showing the workflow of your model from data in to data out.\n",
+        "\n",
+        "It's also one way to start testing your model in the wild.\n",
+        "\n",
+        "You may know where it works and where it doesn't but chances are someone out there will find a new bug before you do.\n",
+        "\n",
+        "To build our demo, we're going to use an open-source library called [Gradio](https://www.gradio.app/guides/quickstart).\n",
+        "\n",
+        "Gradio allows you to make machine learning demo apps with Python code and best of all, it's part of the Hugging Face ecosystem so you can share your demo to the public directly through Hugging Face.\n",
+        "\n",
+        "<figure style=\"text-align: center;\">\n",
+        "    <!-- figtemplate -->\n",
+        "    <img src=\"https://huggingface.co/datasets/mrdbourke/learn-hf-images/resolve/main/learn-hf-text-classification/06-gradio-workflow-for-ml-demos.png\"\n",
+        "     alt=\"Diagram illustrating the workflow for creating machine learning demos using Gradio. The process starts with data from datasets, which is fed into a model built using Transformers. The model is then used to create a demo hosted on Hub/Spaces/Gradio. The Gradio interface helps visualize the workflow, with inputs such as 'A photo of sushi rolls on a white plate' and 'A yellow tractor driving over a grassy hill'. These inputs are processed by the model to produce outputs classified as 'Food' or 'Not Food'. This setup demonstrates how Gradio facilitates the creation of interactive ML demos.\"\n",
+        "     style=\"width: 100%; max-width: 900px; height: auto;\"/>\n",
+        "     <figcaption>Going on the premise of data, model, demo, Gradio helps to create the demo. Once you've got a trained model on the Hugging Face Hub, you can setup a Gradio interface to import that model and interact it with it. Gradio interfaces can be deployed on Hugging Face Spaces and shared with others so they can try your model too.</figcaption>\n",
+        "</figure>\n",
+        "\n",
+        "Gradio works on the premise of input -> function (this could be a model) -> output.\n",
+        "\n",
+        "In our case:\n",
+        "\n",
+        "* Input = A string of text.\n",
+        "* Function = Our trained text classification model.\n",
+        "* Output = Predicted output of food/not_food with prediction probability."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JcUKbvkZFTyq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
