turned our model into a demo

--- a/hugging_face_text_classification.ipynb
+++ b/hugging_face_text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM8GUbyhp6w/nCgmMeqD6PV",
+      "authorship_tag": "ABX9TyPchFt19MKs5/vptBgT7vlG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15053,6 +15053,150 @@
         "* Input = A string of text.\n",
         "* Function = Our trained text classification model.\n",
         "* Output = Predicted output of food/not_food with prediction probability."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K-2MJ8J6pvHp"
+      },
+      "source": [
+        "## 10.1 Creating a simple function to perform inference\n",
+        "\n",
+        "Let's create a function to take an input of text, process it with our model and return a dictionary of the predicted labels.\n",
+        "\n",
+        "Our function will:\n",
+        "\n",
+        "1. Take an input of a string of text.\n",
+        "2. Setup a text classification pipeline using `transformers.pipeline` as well as our trained model (this can be from our local machine or loaded from Hugging Face). We'll return all the probabilities from the output using `top_k=None`.\n",
+        "3. Get the outputs of the text classification pipeline from 2 as a list of dictionaries (e.g. `[{'label': 'food', 'score': 0.999105}, {'label': 'not_food', 'score': 0.00089}]`).\n",
+        "4. Format and return the list of dictionaries from 3 to be compatible with Gradio's [`gr.Label`](https://www.gradio.app/docs/gradio/label) output (we'll see this later) which requires a dictionary in the form `[{\"label_1\": probability_1, \"label_2\": probability_2}]`.\n",
+        "\n",
+        "Onward!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rNi0tsoGpvHp",
+        "outputId": "267e0cdb-985d-42b4-ff99-71fc270b0e63"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'food': 0.9992194175720215, 'not_food': 0.0007805348141118884}"
+            ]
+          },
+          "execution_count": 78,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from typing import Dict\n",
+        "\n",
+        "# 1. Create a function which takes text as input\n",
+        "def food_not_food_classifier(text: str) -> Dict[str, float]:\n",
+        "    \"\"\"\n",
+        "    Takes an input string of text and classifies it into food/not_food in the form of a dictionary.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # 2. Setup the pipeline to use the local model (or Hugging Face model path)\n",
+        "    food_not_food_classifier = pipeline(task=\"text-classification\",\n",
+        "                                        model=local_model_path,\n",
+        "                                        batch_size=32,\n",
+        "                                        device=\"cuda\" if torch.cuda.is_available() else \"cpu\", # set the device to work in any environment\n",
+        "                                        top_k=None) # return all possible scores (not just top-1)\n",
+        "\n",
+        "    # 3. Get outputs from pipeline (as a list of dicts)\n",
+        "    outputs = food_not_food_classifier(text)[0]\n",
+        "\n",
+        "    # 4. Format output for Gradio (e.g. {\"label_1\": probability_1, \"label_2\": probability_2})\n",
+        "    output_dict = {}\n",
+        "    for item in outputs:\n",
+        "        output_dict[item[\"label\"]] = item[\"score\"]\n",
+        "\n",
+        "    return output_dict\n",
+        "\n",
+        "# Test out the function\n",
+        "food_not_food_classifier(\"My lunch today was chicken and salad\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C9bnl1HwpvHq"
+      },
+      "source": [
+        "### Building a small Gradio demo to run locally\n",
+        "\n",
+        "We've got a working function to go from text to predicted labels and probabilities.\n",
+        "\n",
+        "Let's now build a Gradio interface to showcase our model.\n",
+        "\n",
+        "We can do so by:\n",
+        "\n",
+        "1. Importing Gradio (using `import gradio as gr`).\n",
+        "2. Creating an instance of [`gr.Interface`](https://www.gradio.app/docs/gradio/interface) with parameters `inputs=\"text\"` (for our text-based inputs) called `demo` and `outputs=gr.Label(num_top_classes=2)` to display our output dictionary. We can also add some descriptive aspects to our `demo` with the `title`, `description` and `examples` parameters.\n",
+        "3. Running/launching the demo with [`gr.Interface.launch()`](https://www.gradio.app/docs/gradio/interface#interface-launch).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-WnN07CPpvHr",
+        "outputId": "3edb832d-7ca8-4874-8666-22df91b8e6c1"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Running on local URL:  http://127.0.0.1:7860\n",
+            "\n",
+            "To create a public link, set `share=True` in `launch()`.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": []
+          },
+          "execution_count": 79,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# 1. Import Gradio as the common alias \"gr\"\n",
+        "import gradio as gr\n",
+        "\n",
+        "# 2. Setup a Gradio interface to accept text and output labels\n",
+        "demo = gr.Interface(\n",
+        "    fn=food_not_food_classifier,\n",
+        "    inputs=\"text\",\n",
+        "    outputs=gr.Label(num_top_classes=2), # show top 2 classes (that's all we have)\n",
+        "    title=\"Food or Not Food Classifier\",\n",
+        "    description=\"A text classifier to determine if a sentence is about food or not food.\",\n",
+        "    examples=[[\"I whipped up a fresh batch of code, but it seems to have a syntax error.\"],\n",
+        "              [\"A delicious photo of a plate of scrambled eggs, bacon and toast.\"]])\n",
+        "\n",
+        "# 3. Launch the interface\n",
+        "demo.launch()"
       ]
     },
     {
